f6b5d0668130 replay gib_eks